# Zorvyn_Assignment

./: Dockerfile  README.md  alembic.ini  entrypoint.sh  finance.db  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_soft_delete.py
src/: constants.py  server.py
src/clients/db/: connection.py  migrations.py
src/config/: config.py
src/enums/: enums.py
src/handlers/: auth_handlers.py  error_handlers.py
src/handlers/server/: __init__.py  server_handler.py
src/log/: logger.py
src/middleware/: rate_limiter.py  request_logging.py
src/models/: models.py
src/routes/: auth.py  dashboard.py  financial_records.py  health.py  users.py
src/schemas/: auth_schemas.py  dashboard_schemas.py  financial_record_schemas.py  user_schemas.py
src/services/: auth_service.py  dashboard_service.py  financial_record_service.py  user_service.py
src/utils/: error_utils.py  query_utils.py  security.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_financial_records.py
